--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ nav {
     color: var(--text-color);
     gap: 5px 0;
     visibility: unset;
+    transition: width .8s;
 }
 
 nav > div {
@@ -47,7 +48,7 @@ nav > div {
     border-radius: 15px;
 }
 
-nav > div:not(:first-child):hover {
+nav > div:not(:first-child):not(:last-child):hover {
     background-color: var(--light-grey);
 }
 
@@ -110,20 +111,42 @@ input:focus-within {
 
 /* menu hide */
 
+.toHide {
+    opacity: 1;
+    transition: opacity .6s;
+}
+
 .hide {
     opacity: 0;
-    transition: opacity 1s;
+    transition: opacity .6s;
+    visibility: collapse;
 }
 
 .shrink {
     width: 5.5rem;
-    transition: width 1s;
+    transition: width .8s;
 }
 
 .logo-hide {
     opacity: 0;
-    transition: opacity 1s;
+    visibility: collapse;
+    transition: opacity .2s, visibility .25s;
 }
+
+.toggle-pos {
+    left: -12px;
+    position: relative;
+}
+
+.log-out-pose {
+    position: relative;
+    left: -24px;
+}
+
+.toggleButton, nav > div > span, #toggleButton {
+    cursor: pointer;
+} 
+
 
 
 /* nav > div > img:first-child {
